[package]
authors = ["Russell McClellan <russell.mcclellan@gmail.com>"]
name = "gba-make-cartridge"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/russellmcc/gba-make-cartridge"
exclude = [
  ".travis.yml",
]

[dependencies]
clap = "~2.23.2"
error-chain = "~0.10.0"
tempfile = "^2.1.5"

